# ArduinoCar

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  CMakeListsUser.txt  README.md  platformio.ini
.github/: pull_request_template.md
.github/workflows/: auto_assign.yml  auto_author_assign.yml  platformio.yml
arduino_project/sketch/: brain.h
include/: brain.h  car_builder.h  car_control.h  sensor.h
lib/car_control/: car.cpp  car_builder.cpp  car_control.h  core.h  custom.h  fake.h  move_direction.h  wheel.h
lib/config/: config.h
lib/minimum/: car_controller.h  controller.h  fake.h  follow_car.cpp  follow_car.h  impl.h  line_trace_car.h  motor.cpp  motor.h  move_direction.h  photo_reflector.cpp  photo_reflector.h  photo_reflector_impl.cpp  photo_reflector_impl.h  pid_trace_controller.h  sensor.cpp  sensor.h  sensor_impl.cpp  sonic_sensor.cpp  sonic_sensor.h  sonic_sensor_impl.cpp  sonic_sensor_impl.h  sonic_sensor_updater.cpp  sonic_sensor_updater.h  trace_car.cpp  trace_car.h  util.cpp  util.h
run_test/: a_light_sensor.ino  run_straight.ino  sample_code.ino
src/: config.h  follow_main.cpp  line_trace_main.cpp  main.cpp  trace_main.cpp  zigzag_test.cpp
src/control/: Instruction.h  brain.h  car.cpp  car.h  config.h  instruction.h  line_sensor_adapter.cpp  line_sensor_adapter.h  photo_reflector.cpp  photo_reflector.h  sensor.cpp  sensor.h  wheel.cpp  wheel.h
src/legacy/: main_legacy.cpp
test/: line_trace_go_and_back_brain_test.cpp  reflector_test.cpp  test_wheel.cpp
test/test_heartbeat_led/: main.cpp
test/test_instruction_coroutine/: test_instruction_coroutine.cpp
test/test_line_trace_continuous_brain/: line_trace_continuous_brain_test.cpp
test/test_line_trace_go_and_back_brain/: line_trace_go_and_back_brain_test.cpp
test/test_line_trace_go_and_turn_back_brain/: line_trace_go_and_turn_back_brain_test.cpp
uml/: car_control.puml  class_design.puml  core.puml  custom.puml  lifecycle.puml
(+273 files in other folders)
